# adedu

./: .gitignore  LICENSE  README.md
adedu-app/: README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml
adedu-app/src/: index.html  styles.css
adedu-app/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
adedu-app/src/app/crear-usuario/: crear-usuario.component.ts
adedu-app/src/app/header/: header.component.html
adedu-app/src/app/home/: home.component.html  home.component.ts
adedu-app/src/app/login/: login.component.css  login.component.html  login.component.ts
adedu-app/src/app/registro/: registro.component.css  registro.component.html  registro.component.ts
adedu-app/src/app/service/: api.service.ts  perfiles.service.ts  usuarios.service.ts
api/: alembic.ini  database.py  main.py  models.py  pyproject.toml  schemas.py
api/alembic/: env.py
api/alembic/versions/: 393152efbf85_agregando_campo_para_correo_electrónico.py  45e27fed1273_corrigiendo_nombre_de_tabla.py  b46e8416589d_agregando_columna_de_contraseña.py  c659b39a6fa8_primeros_schemas.py  d00dcf987378_agregando_indice_a_tabla_tarea.py  e5f03dd40c9a_arreglando_relacion_muchos_a_muchos_.py
